add user domain
